Feat: Education & Journey

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 <!-- ─── EDUCATION & CERTIFICATIONS ────────────── -->
 <section id="education">
   <div class="container">
-    <h2 class="section-title animate-on-scroll" id="education-title">Formação & Certificações</h2>
-    <div id="education-list" class="education-grid animate-on-scroll"></div>
+    <h2 class="section-title animate-on-scroll" id="education-title">Formação &amp; Trajetória</h2>
+    <div id="education-list" class="animate-on-scroll"></div>
   </div>
 </section>
 
