Feat: pagination in projet and ajusts
Fix: Home link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <nav id="main-nav" role="navigation">
   <div class="container">
     <div class="nav-inner">
-      <a href="index.html" class="nav-logo">CS<span style="color:var(--text-secondary)">.</span>DEV</a>
+      <a href="https://cristianodencode.github.io/landing-page/" class="nav-logo">CS<span style="color:var(--text-secondary)">.</span>DEV</a>
 
       <!-- Desktop links -->
       <div id="nav-links"></div>
@@ -150,9 +150,10 @@
     <h2 class="section-title animate-on-scroll" id="projects-title">Projetos em Destaque</h2>
     <div id="projects-grid"></div>
     <div class="projects-more animate-on-scroll">
-      <a class="btn btn-secondary" id="projects-more-btn" href="#" target="_blank" rel="noopener">
-        Outros Projetos <i class="fa fa-arrow-right" style="font-size:0.75rem;"></i>
-      </a>
+      <button class="btn btn-secondary" id="projects-more-btn">
+        <span>Outros Projetos</span>
+        <i class="fa fa-arrow-right" style="font-size:0.75rem;"></i>
+      </button>
     </div>
   </div>
 </section>
@@ -205,8 +206,8 @@
       <div class="contact-box animate-on-scroll">
         <div style="font-size:2.5rem;">📬</div>
 
-        <p style="font-size:0.9rem; color:var(--text-secondary); text-align:center; max-width:340px;">
-          Respondo em até 24 horas. Estou aberto a oportunidades remotas e freelance.
+        <p id="contact-text" style="font-size:0.9rem; color:var(--text-secondary); text-align:center; max-width:340px;">
+          Respondo em até 24 horas. Estou aberto a oportunidades remotas.
         </p>
 
         <div class="contact-icons">
@@ -231,7 +232,7 @@
 <footer>
   <div class="container">
     <p class="footer-text">
-      Built with <span class="footer-neon">♥</span> · Headless JSON CMS · Hosted on GitHub Pages
+      Built with <span class="footer-neon">♥</span> · Hosted on GitHub Pages
     </p>
   </div>
 </footer>
