Fix: Final ajusts for landing page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Left: content -->
       <div class="hero-content">
         <div style="font-family:var(--font-mono); font-size:0.75rem; color:var(--neon-green); letter-spacing:0.15em; margin-bottom:12px; text-transform:uppercase;">
-          ◈ Available for opportunities
+          <span id="hero-head" ◈ Available for opportunities </span>
         </div>
         <h1 id="hero-name">CRISTIANO SOUZA</h1>
         <p id="hero-role">Desenvolvedor Full Stack Pleno</p>
